@@ -1,15 +1,13 @@
 package com.coreoz.webservices.admin.permissions;
 
-import java.util.Set;
-
-import javax.inject.Inject;
-import javax.inject.Singleton;
-
 import com.coreoz.plume.admin.services.permission.LogApiAdminPermissions;
 import com.coreoz.plume.admin.services.permission.SystemAdminPermissions;
 import com.coreoz.plume.admin.services.permissions.AdminPermissionService;
 import com.coreoz.plume.admin.services.permissions.AdminPermissions;
-import com.google.common.collect.ImmutableSet;
+
+import javax.inject.Inject;
+import javax.inject.Singleton;
+import java.util.Set;
 
 @Singleton
 public class ProjectAdminPermissionService implements AdminPermissionService {
@@ -18,7 +16,7 @@ public class ProjectAdminPermissionService implements AdminPermissionService {
 
 	@Inject
 	public ProjectAdminPermissionService() {
-		this.permissionsAvailable = ImmutableSet.of(
+		this.permissionsAvailable = Set.of(
 			AdminPermissions.MANAGE_USERS,
 			AdminPermissions.MANAGE_ROLES,
 			LogApiAdminPermissions.MANAGE_API_LOGS,
